--- a/Public/index.html
+++ b/Public/index.html
@@ -47,7 +47,7 @@
         </form>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="http://localhost:3000/socket.io/socket.io.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
